compiler/src/test/resources/golden/errors/type_bitwise_non_int.dawn
fn f() -> Int = 1.5 & 2.0
