compiler/src/test/resources/golden/errors/type_bitwise_non_int.err
error: bitwise operators expect Int, left side is Float
  --> type_bitwise_non_int.dawn:1:17
  |
1 | fn f() -> Int = 1.5 & 2.0
  |                 ^^^
